# cleaner

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  config.example.toml  deny.toml  install.sh
.github/workflows/: build.yml
src/: cache_detector.rs  cli.rs  config.rs  display.rs  file_operations.rs  log_cleaner.rs  main.rs
tools/cache_generator/: Cargo.toml
tools/cache_generator/src/: main.rs
