[package]
name = "cleaner"
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
mutex = "1.0.2"
once_cell = "1.21.3"
walkdir = "2.5.0"
colored = "3.0.0"
libc = "0.2.175"

[workspace]
members = [
    "tools/cache_generator"
]

[profile.release]
lto = true
strip = "symbols"
