[package]
name = "cleaner"
version = "0.5.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "cleaner"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "3.0"
jwalk = "0.8"
rayon = "1.11"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.7"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"

[workspace]
members = [
    "tools/cache_generator"
]

[profile.release]
lto = true
strip = "symbols"
